--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "praktikumTask11",
   "homepage": "https://dimamurugov.github.io/praktikumTask11/",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "a VanillaJS + API project",
+  "main": "./src/js/script.js",
   "scripts": {
-    "build": "cross-env NODE_ENV=production rimraf dist && webpack --mode production",
+    "build": "rimraf dist && cross-env NODE_ENV=production webpack --mode production",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --mode development --open --watch",
     "production": "cross-env NODE_ENV=production gh-pages -d dist"
   },
